src/objects/BFM_Email_Information__c.object
<CustomObject>
    <fields>
        <fullName>Address_Code__c</fullName>
        <label>Address Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Account__c</fullName>
        <label>Carrier Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Email_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SF_Approver__c</fullName>
        <formula>CONTAINS( UPPER(Remark__c), &apos;SF_APPROVAL&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Email Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Email_Information_View</fullName>
        <columns>NAME</columns>
        <columns>Carrier_Account__c</columns>
        <columns>Email__c</columns>
        <columns>Address_Code__c</columns>
        <columns>Remark__c</columns>
        <columns>Contact_Number__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>SF_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <label>Email Information View</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>